--- a/responsive.css
+++ b/responsive.css
@@ -86,5 +86,50 @@ header nav ul li {
       margin-top: 120px;
   }
 
-  }
   
+  
+  /* games */
+
+  .games-container {
+    padding: 0;
+}
+.games-container .games {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin: 0px 10px;
+}
+.games-container .games .game {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 3px;
+    margin: 5px;
+    border: 1px solid #ffffff;
+}
+.games-container .games .game h5 {
+    font-size: 12px;
+}
+
+
+
+  /* footer */
+  
+  footer nav ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+}
+footer .link {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 40px 25px;
+}
+footer .link p {
+    font-size: 12px;
+    text-align: center;
+}
+footer nav ul a {
+    font-size: 12px;
+    text-align: center;
+}
+}
