--- a/style.css
+++ b/style.css
@@ -234,3 +234,56 @@ background: #4EC5F7;
   color: #f948b2;
   cursor: pointer;
 }
+
+/* footer  */
+footer {
+  background-color: #0b0223;
+  padding: 100px 0;
+}
+.footer-logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+}
+.footer-logo h1 {
+  color: #ffffff;
+}
+footer nav {
+  padding: 30px 0;
+}
+footer nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+footer nav ul li {
+  list-style: none;
+}
+footer nav ul a {
+  margin: 20px 20px;
+  text-decoration: none;
+  color: #fff;
+}
+footer .social-icon {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+footer .social-icon i {
+  color: #ffffff;
+  font-size: 40px;
+}
+footer .link {
+  color: rgba(255, 255, 255, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+  padding: 40px 0;
+}
+footer .copyright {
+  color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+}
