--- a/responsive.css
+++ b/responsive.css
@@ -133,3 +133,58 @@ footer nav ul a {
     text-align: center;
 }
 }
+
+
+/* Tab  */
+
+@media only screen and (max-width: 768px) and (min-width: 576px) {
+    /* header   */
+    header nav {
+        padding: 0px 15px;
+    }
+    header nav ul a {
+        margin: 10px 15px;
+    }
+    /* banner */
+    .banner-container {
+        padding: 0px 25px;
+    }
+    .banner-container .banner-text {
+        padding-right: 30container
+ 
+    }
+    /* video  */
+    .video-containers .videos {
+        grid-template-columns: repeat(2, 1fr);
+        padding: 0 30px;
+    }
+
+    .gamer-container {
+        flex-direction: column;
+    }
+    .gamer-container img {
+        width: 100%;
+    }
+    .gamer-container .gamer-text {
+        text-align: center;
+        padding: 0 30px;
+    }
+
+    /* play*/
+    .play {
+        flex-direction: column;
+    }
+    .play .play-text {
+        text-align: center;
+        padding: 10px;
+    }
+    .play .play-img > img {
+        padding: 0px 70px;
+    }
+    .play .play-img .mini-img {
+        width: 35%;
+        padding: 60px;
+        margin-left: 100px;
+        margin-top: 10px;
+    }
+}
